# Quentin62.github.io

./: _config.yml  pyproject.toml  talkmap_out.ipynb
_data/: authors.yml
_pages/: about.md  cv.md  portfolio.html  publications.html
_portfolio/: atom_agency_tome_1.md  belfort_lupin_tome_1.md  blake_et_mortimer_le_dernier_pharaon.md  blake_et_mortimer_tome_22.md  blake_et_mortimer_tome_25.md  bloche_tome_11.md  bloche_tome_9.md  boulard_tome_9.md  boule_et_bill_tome_37.md  champignac_tome_1.md  comme_des_betes_tome_1.md  demon_tome_1.md  donjon_monsters_tome_13.md  donjon_monsters_tome_14.md  fantomiald.md  frnck_tome_1.md  game_over_tome_3.md  gaston_0.md  gipar_le_tresor_de_noirmoutier.md  han_solo_tome_1.md  hero_corp_tome_1.md  idefix_tome_4.md  imbattable_tome_1.md  iznogoud_des_bougies_pour_iznogoud.md  iznogoud_tome_33.md  l_agent_212_agent_trouble.md  l_atelier_mastodonte_tome_1.md  l_atelier_mastodonte_tome_2.md  l_homme_qui_pouvait_accomplir_des_miracles.md  l_ile_carrement_perdue_tome_1.md  la_guerre_des_lulus_tome_1.md  la_septieme_fonction_du_langage.md  lanfeust_des_etoiles.md  lapinot_par_toutatis.md  lapinot_tome_9.md  lastman_1.md  lastman_tome_1.md  le_petit_spirou_tome_6.md  le_royaume_tome_8.md  leonard_genie_en_balade.md  (+49 more)
dedicace/: Dédicace - Feuille 1.csv
files/: publication.bib
markdown_generator/: dedidace.py
