[tool.poetry]
name = "quentin62-github-io"
version = "0.1.0"
description = ""
authors = ["Quentin Grimonprez <qgrimonprez@diagrams-technologies.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
